# archive-testing

./: Cargo.toml  readme.md
scripts/: malicious.sh  test.sh  test0v1.sh  testlistdir.sh
src/: asstdin.c  common.rs  ioringv1.rs  liblistdir.rs  listdir.rs  main.rs  open.rs
